Revision history for Ocsinventory::Agent

       * Add new fields in setSnmpLoadBalancer() method in Common.pm

2.0.x
       * Bug #798428 about standalone agent building
       * Change variable names to lowercase in Snmp/3375.pm
       * Fix a closedir omission in Solaris/Packages.pm
       * Modify releases tarball name when building it using make dist command
       * Various patches for CPU, Bios and Drives detection for HPUX systems     
       * Fix Bug #781732 about a missing chomp() in Processes.pm
 
2.0
       * Fix Bug #778692 about using authentication when sending messages in Download.pm
       * Patch from Yoann Le Bihan for Solaris zones support
       * Fix Bug #586321 about wrong version comparison in Vmsystem.pm
       * Bug #772436 about download end message report in Download.pm
       * Display support log received from PROLOG
       * Various patches for Snmp/9.pm module (Cisco)
       * Add --nolocal option to desactivate local mode even if it is set in config file or command line
       * Fix Bug #767290 about /etc/sysconfig/ocsinventory-agent server settings ignore (only for Redhat like distributions)
       * Only inventory vitualmachines which have an UUID in VirtualBox.pm to prevent inventoring USB devices or shared folders as virtualmachines
      
2.0 rc4
       * Complety clean the disastrous treatments of accountinfos while receiving it from server,storing it in file and adding it in inventory
       * Fix UTF8 problems due to XML::Simple::XMLIn()

2.0 rc3
       * Fix Bug #720635 about lspci usage on old Linux distributions
       * Fix Bug #720626 about Gentoo packages with hyphen in their names
       * Fix a bug with the use of pacman tool on ArchLinux. We now launch the real packages manager instead of the famous game ;) ;)
       * Avoid perl errors when no answer from OCS server
       * Enhance logging in Snmp.pm and Download.pm when disabling this modules (local mode or prerequisites not OK)